# rmt-denoise

./: .gitignore  README.md  app.py  pyproject.toml
examples/: quick_start.py
rmt_denoise/: __init__.py  core.py  estimators.py  generalized_cov.py  io.py  metrics.py  mp_law.py  noise.py
web/: app.js  index.html  styles.css
